--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-calendars": "^1.1289.0"
+    "react-native-calendars": "^1.1289.0",
+    "react-native-paper": "^4.12.5",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
