--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
@@ -16,7 +18,8 @@
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
     "react-native-paper": "^4.12.5",
-    "react-navigation": "^4.4.4"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
