--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "axios": "^1.1.3",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
@@ -19,7 +22,8 @@
     "react-native-calendars": "^1.1289.0",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
