--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
-    "react-native-paper": "^4.12.5",
+    "react-native-paper": "^5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "typescript": "^4.6.3"
