--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "@types/react": "17.0.21",
+    "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "axios": "^1.1.3",
     "expo": "~46.0.13",
@@ -25,6 +25,7 @@
     "react-native-paper": "^5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "typescript": "^4.6.3",
     "yup": "^0.32.11"
   },
