--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
     "react-native-draggable-flatlist": "^4.0.0",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^5.0.0-rc.5",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
